--- a/TYPESCRIPT-PARA-ANGULAR/package.json
+++ b/TYPESCRIPT-PARA-ANGULAR/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dist": "tsup src",
-    "start": "tsx src/index.ts",
-    "start:dist": "npm run dist && node dist/index.js"
+    "start": "npx tsc && node build/index.js",
+    "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "ts-node-dev": "^2.0.0",
     "tsup": "^8.5.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
